---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2024-02-01
  Bugfixes:
    - Fixed throughput text not changing surface, therefore only being visible on the first surface
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2024-01-30
  Features:
    - Added explicit support for Smart Inserters. If SI is enabled its settings will be used
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2024-01-28
  Bugfixes:
    - Fixed missing Date in version 1.1.0
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2024-01-28
  Major Features:
    - Added inserter adjustment using SHIFT+F with an in world selection grid
  Features:
    - Added place and adjust by pressing SHIFT+F while holding an inserter in the cursor/hand
    - Added setting to pipette after place and adjust to get the inserter in cursor again
    - Added inserter speed estimation text for inserters as well as while selecting pickup and or drop
    - Added mirrored inserters only map setting, off by default
    - Added technology for near inserters, allowing adjustment of the drop position within tiles
    - Added technologies up to a range of 3 tiles
    - Added technologies to increase the amount of directions an inserter is able to reach, such as diagonals
    - Added startup settings to enable/disable each technology
    - Added changing of inserter base direction without changing pickup and drop positions
    - Added ghost support, including an inserter being revived or dieing
    - Added disabling of inserters during adjustment