@@ -2,6 +2,7 @@
 Version: 1.1.4
 Date: ????
   Changes:
+    - Improved inserter throughput text size for high resolution displays with higher pixel density
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 2024-02-01
